[package]
name = "ness_stretch_sc"
version = "0.1.0"
authors = ["Sam Pluta <spluta@gmail.com>"]
edition = "2018"

# Note: header file generation happens in build.rs
[lib]
name = "ness_stretch"
# we need to tell the compiler to create static and dynamic libraries
crate-type = ["lib", "staticlib", "cdylib"]


[build-dependencies]
cbindgen = "0.26.0"

[dependencies]
libc = "0.2.147"
ness_stretch_lib = "0.1.2"
rand = "0.8.5"
crossbeam = "0.8"